Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-1397

HTTPS through proxy does not work for WS client

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 1.6.0
    • 1.7.0
    • transport/http
    • None
    • I have WS client in windows XP machine

    Description

      I have a web service client using axis2/c installed in a windows XP machine. The client machine is behind a proxy server. The web service provides services that requires use HTTPS/SSL.

      I have set the proxy host and port properly in the configuration file axis2.xml, and in my case no proxy authentication is needed. The HTTPS/SSL setting is also configured in axis2.xml. My web service client is still unable to establish connection with the web server.

      I tested that HTTPS/SSL without proxy server is working fine, I also tested that HTTP (NOT HTTPS) works with proxy server settings.

      Not sure if this is related to the issue JIRA-1312.

      Attachments

        Issue Links

          Activity

            People

              Unassigned Unassigned
              fchou99 Frank Zhou
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: