Fix ssl connect through proxy

Fix logic error in axis2_http_client_connect_ssl_host where header
parsing would get stuck in a loop.

Fixes AXIS2C-1397 and AXIS2C-1665